Fixed reference error in slanted line. Removed vertical spacing from field.

--- a/app/assets/css/tactics.css
+++ b/app/assets/css/tactics.css
@@ -5,6 +5,11 @@
 .player {
   position: absolute; }
 
+.player.selected {
+  border-radius: 18px;
+  border-style: solid;
+  border-width: 3px; }
+
 .toolbar-gadget {
   vertical-align: center;
   z-index: 4;
@@ -15,18 +20,16 @@
   width: 1280px;
   height: 801px;
   vertical-align: top;
-  margin-top: 20px;
   background-image: url("../img/soccer-field.png");
   background-repeat: no-repeat;
   position: relative; }
 
 #tactics-toolbar {
-  max-width: 1280px;
-  background-color: blue; }
+  max-width: 1280px; }
 
 #adminFloatingMenu {
   position: absolute;
-  left: 50px;
+  left: 150px;
   top: 200px;
   z-index: 200; }
 
